--- a/Nacionalidade e Potencial .ipynb
+++ b/Nacionalidade e Potencial .ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "fifa19 = pd.read_csv('C:/Users/Pcyes_User/OneDrive/Documentos/My projects/Data Science/Data Science aulas/Python/Pandas e numpy/Data/fifa19.csv', sep=',', skiprows=None)\n",
+    "fifa19 = pd.read_csv('C:./Data/fifa19.csv', sep=',', skiprows=None)\n",
     "fifa19.head()"
    ]
   },
