--- a/Atributos Jogadores.ipynb
+++ b/Atributos Jogadores.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/Pcyes_User/OneDrive/Documentos/My projects/Data Science/Data Science aulas/Python/Pandas e numpy/Data/fifa19.csv\", sep = ',', decimal=',', skiprows=None)\n",
+    "df = pd.read_csv(\"C:./Data/fifa19.csv\", sep = ',', decimal=',', skiprows=None)\n",
     "df.head()"
    ]
   },
@@ -971,7 +971,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -985,7 +985,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
