--- a/Fifa jogadores.ipynb
+++ b/Fifa jogadores.ipynb
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "fifa19 = pd.read_csv('C:/Users/Pcyes_User/OneDrive/Documentos/My projects/Data Science/Data Science aulas/Python/Pandas e numpy/Data/fifa19.csv')\n",
+    "fifa19 = pd.read_csv('C:./Data/fifa19.csv')\n",
     "fifa19.head()"
    ]
   },
