--- a/Tabela Dinamica.ipynb
+++ b/Tabela Dinamica.ipynb
@@ -417,7 +417,7 @@
     }
    ],
    "source": [
-    "fifa19 = pd.read_csv(\"C:/Users/Pcyes_User/OneDrive/Documentos/My projects/Data Science/Data Science aulas/Python/Pandas e numpy/Data/fifa19.csv\")\n",
+    "fifa19 = pd.read_csv(\"C:./Data/fifa19.csv\")\n",
     "fifa19"
    ]
   },
@@ -1728,7 +1728,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1742,7 +1742,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
