--- a/Tabela Dinamica.ipynb
+++ b/Tabela Dinamica.ipynb
@@ -430,7 +430,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tarsi\\AppData\\Local\\Temp\\ipykernel_6940\\119986359.py:3: FutureWarning: The operation <function mean at 0x000001BA33D85D00> failed on a column. If any error is raised, this will raise an exception in a future version of pandas. Drop these columns to avoid this warning.\n",
+      "C:\\Users\\tarsi\\AppData\\Local\\Temp\\ipykernel_12908\\119986359.py:3: FutureWarning: The operation <function mean at 0x000001EEF75F5D00> failed on a column. If any error is raised, this will raise an exception in a future version of pandas. Drop these columns to avoid this warning.\n",
       "  pd.pivot_table(fifa19_filtered, index='Nationality', aggfunc = np.mean)\n"
      ]
     },
@@ -692,7 +692,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tarsi\\AppData\\Local\\Temp\\ipykernel_6940\\1240358849.py:1: FutureWarning: The operation <function median at 0x000001BA33EB42C0> failed on a column. If any error is raised, this will raise an exception in a future version of pandas. Drop these columns to avoid this warning.\n",
+      "C:\\Users\\tarsi\\AppData\\Local\\Temp\\ipykernel_12908\\1240358849.py:1: FutureWarning: The operation <function median at 0x000001EEF77242C0> failed on a column. If any error is raised, this will raise an exception in a future version of pandas. Drop these columns to avoid this warning.\n",
       "  pd.pivot_table(fifa19_filtered, index='Nationality', aggfunc = np.median)\n"
      ]
     },
